--- a/packages/sample-app/src/app/body/body.html
+++ b/packages/sample-app/src/app/body/body.html
@@ -4,7 +4,7 @@
     SPDX-License-Identifier: BSD-3-Clause
     For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause
 -->
-<template>
+<template lwc:render-mode='light'>
     <app-header></app-header>
 
     <store-app if:true={isStore}></store-app>
