--- a/packages/sample-app/src/app/header/header.html
+++ b/packages/sample-app/src/app/header/header.html
@@ -4,7 +4,7 @@
     SPDX-License-Identifier: BSD-3-Clause
     For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause
 -->
-<template>
+<template lwc:render-mode='light'>
     <header>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark ustify-content-between">
             <a class="navbar-brand" href="#">LWC Wire Adapter Examples</a>
